# DikkhaClaw

./: .gitignore  .mcp.json  LAUNCH.md  README.md  pyproject.toml
benchmarks/: run_benchmark.py
benchmarks/results/: SUMMARY.md  gemini_gemini-2.5-pro_1775495521.json  gemini_gemini-2.5-pro_1775495620.json  gemini_gemini-3-pro-preview_1775496327.json  gemini_gemini-3-pro_1775495978.json  gemini_gemini-3.1-pro-preview_1775495808.json  gemini_gemini-3.1-pro-preview_1775495943.json
data/: question_bank.json
data/plans/: engineering_easy.json  medical_easy.json
docs/: OAUTH_NOTES.md
scripts/: build_lesson_plans.py  import_to_postgres.py
spec/: 00_overview.md  01_types_messages.md  02_provider.md  03_tools.md  04_engine.md  05_config_memory.md  06_cli_repl.md  07_hooks_agents.md  INDEX.md  PLAN.md
spec/sessions/: session-001-phase1.md  session-002-phase2-4.md  session-003-phase5.md  session-004-final.md
src/clawpy/: __init__.py  __main__.py  cli.py  server.py  types.py
src/clawpy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/clawpy/agents/: __init__.py  loader.py
src/clawpy/auth/: __init__.py  account_pool.py  oauth.py  usage.py
src/clawpy/config/: __init__.py  config.py  paths.py
src/clawpy/curriculum/: __init__.py  lesson_content.py  models.py  planner.py  regions.py  syllabus.py  translate.py
src/clawpy/engine/: __init__.py  compact.py  cost.py  (+9 more)
tests/: test_config.py  test_engine.py  test_file_state.py  test_openai_conversion.py  test_permission.py  test_sse.py  test_token_budget.py  test_tool_registry.py  test_types.py
(+37 files in other folders)
