[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawpy"
version = "0.1.0"
description = "Multi-model CLI coding agent — Python rewrite of OpenClaude"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
clawpy = "clawpy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
